--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flubber": "^0.4.2",
     "motion": "^12.0.11",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.83.4"
