--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
+    "@prisma/client": "^6.4.1",
     "@types/flubber": "^0.4.0",
     "bootstrap": "^5.3.3",
     "flubber": "^0.4.2",
@@ -26,6 +28,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "prisma": "^6.4.1",
     "typescript": "^5"
   }
 }
